muted logging on spring console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.h2.console.enabled=true
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+logging.level.root=ERROR
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
